# Py4Lexis

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  config_template.toml  pyproject.toml  requirements.txt
examples/: airflow.py  datasets.py  irods.py  upload.py
modules/: py4Lexis.py  tus_client_py4Lexis.py  uploader_py4Lexis.py
py4lexis/: init.py  lexis_session.py  tus_client_py4Lexis.py  uploader_py4Lexis.py
src/py4lexis/: __init__.py  backend.py  directory_tree.py  exceptions.py  helper.py  irods.py  kck_session.py  session.py  utils.py
src/py4lexis/cli/: airflow.py  datasets.py
src/py4lexis/custom_types/: directory_tree.py
src/py4lexis/ddi/: datasets.py  tus_client.py  uploader.py
src/py4lexis/workflows/: airflow.py
