[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py4lexis"
version = "1.1.0"
description = "Provides functions to manage datasets within LEXIS platform."
readme = "README.md"
authors = [{ name = "Martin Golasowski", email = "martin.golasowski@vsb.cz" },
           { name = "Ladislav Foltyn", email = "ladislav.foltyn@vsb.cz" },
           { name = "Marek Nieslanik", email = "nie0067@vsb.cz" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["hpc", "py4lexis", "lexis"]
dependencies = [
    "tabulate==0.9.0",
    "requests==2.31.0",
    "python-keycloak==3.3.0",
    "python-irodsclient==1.1.7",
    "tomli==2.0.1",
    "tuspy==1.0.0",
    "pandas==2.0.3",
    "future==0.18.3"
]
requires-python = ">=3.10"

[project.optional-dependencies]
build = ["build", "twine"]
dev   = ["black", "bumpver", "pytest"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py310
        py39
        type

    [testenv]
    deps = pytest
    commands = pytest tests

    [testenv:type]
    deps = mypy
    commands = mypy src
"""

[tool.ruff]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"