[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py4lexis"
version = "1.2.0"
description = "Provides functions to manage datasets within LEXIS platform."
readme = "README.md"
authors = [{ name = "Martin Golasowski", email = "martin.golasowski@vsb.cz" },
           { name = "Ladislav Foltyn", email = "ladislav.foltyn@vsb.cz" },
           { name = "Marek Nieslanik", email = "nie0067@vsb.cz" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["hpc", "py4lexis", "lexis"]
dynamic=["dependencies"]
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}